# simulant_templates

./: .gitignore  LICENSE  README.md
third_person_example/: CMakeLists.txt  simulant.json
third_person_example/assets/simulant/fonts/Orbitron/: orbitron-bold-96.fnt  orbitron-regular-18.fnt  orbitron-regular-24.fnt  orbitron-regular-48.fnt
third_person_example/level_editor/: tps_template.blend  tps_template.blend1
third_person_example/sources/: main.cpp
third_person_example/sources/scenes/: player.cpp  tp_camera.cpp
third_person_example/tests/: test_sample.h
